# francescoalbanese-dev-infra

./: .gitignore  .gitignore~  .pre-commit-config.yaml  Makefile  README.md  package.json  pnpm-lock.yaml  state.conf
.github/actions/configure-aws-env/: action.yml
.github/workflows/: ecr-deploy.yml  lambda-build.yml  python-ci.yml  terraform-deploy.yml
makefiles/: terraform.mk
terraform/ecr/: .terraform.lock.hcl  main.tf  providers.tf  terraform.tf  variables.tf
terraform/ecr/env/: sandbox.tfvars
terraform/environmental/: .terraform.lock.hcl  acm.tf  analytics.tf  cloudfront.tf  dns.tf  iam-boundary.tf  iam-infra-deploy-acm.tf  iam-infra-deploy-cloudfront.tf  iam-infra-deploy-ecr.tf  iam-infra-deploy-iam.tf  iam-infra-deploy-lambda-logs.tf  iam-infra-deploy-s3.tf  iam-infra-deploy-sns-ssm.tf  iam-infra-deploy-sts-ssm.tf  iam-infra-deploy.tf  iam-site-deploy.tf  main.tf  oidc.tf  outputs.tf  providers.tf  s3.tf  terraform.tf  variables.tf
terraform/environmental/env/: sandbox.tfvars
terraform/environmental/functions/: esbuild.config.mjs  package.json  redirect-bare-to-www.js  tsconfig.json
terraform/environmental/lambdas/dashboard-generator/: pyproject.toml
terraform/environmental/lambdas/dashboard-generator/src/dashboard_generator/: handler.py  template.html
terraform/environmental/lambdas/dashboard-generator/tests/: conftest.py  test_handler.py
terraform/environmental/lambdas/log-enricher/: pyproject.toml
terraform/environmental/lambdas/log-enricher/src/log_enricher/: handler.py
terraform/environmental/lambdas/log-enricher/tests/: conftest.py  test_handler.py
(+3 files in other folders)
