[project]
name = "analytics-dashboard-generator"
version = "0.1.0"
description = "On-demand analytics dashboard generator Lambda"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.8.0", "pyright>=1.1.391", "moto[s3]>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard_generator"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "tests"]
extraPaths = ["src"]
