[project]
name = "analytics-log-enricher"
version = "0.1.0"
description = "CloudFront log enricher Lambda with GeoIP"
requires-python = ">=3.13"
dependencies = ["geoip2>=4.8.0"]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.8.0", "pyright>=1.1.391", "moto[s3,sns]>=5.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_enricher"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "tests"]
extraPaths = ["src"]
